fix: 인원 입력 오류 수정